--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -15,7 +15,8 @@
                 <i class="fas fa-plus-circle me-1"></i> Add New User
             </a>
         </div>
-
+        @if (Model.Any())
+        {
         <div class="table-responsive">
             <table class="table table-bordered table-hover align-middle text-center">
                 <thead class="table-light">
@@ -67,6 +68,14 @@
                 </tbody>
             </table>
         </div>
+
+        }
+        else
+        {
+            <div class="alert alert-warning" role="alert">
+                we don't have any data to show
+            </div>
+        }
     </div>
 </div>
 <partial name="_PartialModal" />
