#9 - Add Role for Users

--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -54,6 +54,9 @@
                                     <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">
                                         <i class="fas fa-info-circle"></i>
                                     </a>
+                                    <a class="btn btn-success" asp-action="CreateUserRole" asp-route-UserId="@item.Id">
+                                        <i class="fas fa-info-circle"></i>
+                                    </a>
                                     <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">
                                         <i class="fas fa-trash"></i>
                                     </a>
